<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="0dp">

    <TextView
        android:id="@+id/itemsText"
        style="@style/txtPoppinsmedium15"
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_33pxh"
        android:layout_marginEnd="@dimen/_33pxh"
        android:text="@{vendorProvidorOneVM.vendorProvidorOneModel.txtLanguage}"
        tools:text="@string/msg_item_1" />

    <LinearLayout
        android:id="@+id/itemActionsContainer"
        style="@style/groupStylecornerRadius_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_38pxv"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/itemOTPText"
            style="@style/txtIntersemibold30"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_9pxh"
            android:layout_marginTop="@dimen/_38pxv"
            android:layout_marginBottom="@dimen/_35pxv"
            android:layout_weight="0.57"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@{vendorProvidorOneVM.vendorProvidorOneModel.txt1111OTP}"
            tools:text="@string/lbl_11_11_otp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/itemHandoutButton"
            style="@style/btnSolidRounded_1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_41pxv"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginBottom="@dimen/_35pxv"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingStart="@dimen/_17pxh"
            android:paddingTop="@dimen/_8pxv"
            android:paddingEnd="@dimen/_16pxh"
            android:paddingBottom="@dimen/_3pxv"
            android:singleLine="true"
            android:text="@string/lbl_hand_out"
            android:textAllCaps="false"
            tools:text="@string/lbl_hand_out" />
    </LinearLayout>
</LinearLayout>