<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="vendorLoginVM" type="com.betise_lunchline_vendor.app.modules.vendorlogin.data.viewmodel.VendorLoginVM"/>
    </data>
    <FrameLayout android:id="@+id/frameVendorlogin"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageImageOne"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scaleType="fitXY" imageRes="@{@drawable/img_image1}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_image1"/>

        <LinearLayout
            android:id="@+id/linearColumnwelcometo"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginStart="@dimen/_51pxh"
            android:layout_marginTop="@dimen/_192pxv"
            android:layout_marginEnd="@dimen/_51pxh"
            android:layout_marginBottom="@dimen/_192pxv"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtWelcometo"
                style="@style/txtInterregular18_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_46pxh"
                android:layout_marginEnd="@dimen/_46pxh"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@{vendorLoginVM.vendorLoginModel.txtWelcometo}"
                tools:text="@string/lbl_welcome_to" />

            <TextView
                android:id="@+id/txtLunchLine"
                style="@style/txtHanumanbold36_1"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_46pxh"
                android:layout_marginTop="@dimen/_32pxv"
                android:layout_marginEnd="@dimen/_46pxh"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@{vendorLoginVM.vendorLoginModel.txtLunchLine}"
                tools:text="@string/lbl_lunch_line" />

            <LinearLayout
                android:id="@+id/linearGooglelogin"
                style="@style/groupStylewhite_A700cornerRadius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_138pxv"
                android:gravity="start"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image2991148removeb"
                    android:layout_width="@dimen/_32pxh"
                    android:layout_height="@dimen/_32pxh"
                    android:layout_marginStart="@dimen/_27pxh"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_2991148removeb"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_2991148removeb" />

                <TextView
                    android:id="@+id/txtLoginwithEmai"
                    style="@style/txtInterregular18_2"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_marginEnd="@dimen/_65pxh"
                    android:layout_marginBottom="@dimen/_15pxv"
                    android:layout_weight="0.81"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{vendorLoginVM.vendorLoginModel.txtLoginwithEmai}"
                    tools:text="@string/msg_login_with_emai" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtNewUserSign"
                style="@style/txtIstokWebregular22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_46pxh"
                android:layout_marginTop="@dimen/_42pxv"
                android:layout_marginEnd="@dimen/_46pxh"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@{vendorLoginVM.vendorLoginModel.txtNewUserSign}"
                tools:text="@string/msg_new_user_sign" />
        </LinearLayout>
    </FrameLayout>
</layout>
