<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="dishPageVM" type="com.betise_lunchline_vendor.app.modules.dishpage.data.viewmodel.DishPageVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearDishpage"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_901">
        <ImageView android:id="@+id/imageArrowleft"
            android:layout_height="@dimen/_20pxh"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_35pxv"
            android:layout_width="@dimen/_20pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_arrowleft"
            tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
        <LinearLayout android:id="@+id/linearColumndishname"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius_2">
            <TextView android:ellipsize="end"
                android:id="@+id/txtDishName"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15pxh"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{dishPageVM.dishPageModel.txtDishName}"
                style="@style/txtIntersemibold20" tools:text="@string/lbl_dish_name"/>
            <FrameLayout android:id="@+id/frameStackvectorthirtyfive"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_155pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_16pxv" android:layout_width="@dimen/_216pxh">
                <ImageView android:id="@+id/imageImageFour"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_155pxh"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    cornerRadius="@{@dimen/_15pxh}"
                    imageRes="@{@drawable/img_image4}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_image4"/>
                <ImageView android:id="@+id/imageVectorThirtyFive"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_117pxh"
                    android:layout_marginBottom="@dimen/_18pxv"
                    android:layout_marginEnd="@dimen/_40pxh"
                    android:layout_marginStart="@dimen/_40pxh"
                    android:layout_marginTop="@dimen/_19pxv"
                    android:layout_width="@dimen/_89pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_vector35"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_vector35"/>
            </FrameLayout>
            <TextView android:gravity="start"
                android:id="@+id/txtDescription"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_37pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="match_parent"
                android:text="@{dishPageVM.dishPageModel.txtDescription}"
                style="@style/txtIntersemibold12" tools:text="@string/msg_dish_descriptio"/>
        </LinearLayout>
        <TextView android:ellipsize="end" android:id="@+id/txtPrice"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_35pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{dishPageVM.dishPageModel.txtPrice}"
            style="@style/txtPoppinsmedium24" tools:text="@string/lbl_price"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowcall"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="wrap_content"
            android:orientation="horizontal" style="@style/groupStylecornerRadius_3">
            <ImageView android:id="@+id/imageCall"
                android:layout_height="@dimen/_17pxh"
                android:layout_marginBottom="@dimen/_9pxv"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="@dimen/_12pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_call"
                tools:ignore="ContentDescription" tools:src="@drawable/img_call"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtSeventy"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_9pxv"
                android:layout_marginEnd="@dimen/_43pxh"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_weight="0.69" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{dishPageVM.dishPageModel.txtSeventy}"
                style="@style/txtPoppinsmedium23" tools:text="@string/lbl_70"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            style="@style/btnSolidRounded"
            android:layout_width="@dimen/_234pxh"
            android:layout_height="@dimen/_57pxv"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_31pxv"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginBottom="@dimen/_20pxv"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_9pxv"
            android:singleLine="true"
            android:text="@string/lbl_save"
            android:textAllCaps="false"
            tools:text="@string/lbl_save" />
    </LinearLayout>
</layout>
