<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/_30pxh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView android:id="@+id/foodImage"
        android:layout_height="@dimen/_144pxh"
        android:layout_width="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/img_image4"
        tools:ignore="ContentDescription" tools:src="@drawable/img_image4"/>

    <LinearLayout
        android:id="@+id/foodDataContainer"
        style="@style/groupStylecornerRadius_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearRowdishname"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_9pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/foodName"
                style="@style/txtIntersemibold18"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_12pxv"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_marginBottom="@dimen/_20pxv"
                android:layout_weight="0.49"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="Food name"
                tools:text="@string/lbl_dish_name"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/foodEditButton"
                style="@style/btnSolidRounded_1"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_marginEnd="@dimen/_30pxh"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_5pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_5pxv"
                android:singleLine="true"
                android:text="@string/lbl_add"
                android:textAllCaps="false"
                tools:text="@string/lbl_add" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearToggleDel"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/foodAvailabilityToggle"
                android:layout_width="@dimen/_120pxh"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_marginEnd="@dimen/_25pxv"
                android:layout_marginBottom="@dimen/_8pxv"
                android:textOff="Unavailable"
                android:textOn="Available"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/foodDeleteButton"
                style="@style/btnSolidRoundedOutline"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_45pxv"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginBottom="@dimen/_8pxv"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingStart="@dimen/_26pxh"
                android:paddingTop="@dimen/_6pxv"
                android:paddingEnd="@dimen/_25pxh"
                android:paddingBottom="@dimen/_6pxv"
                android:singleLine="true"
                android:text="@string/lbl_delete"
                android:textAllCaps="false"
                tools:text="@string/lbl_delete" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>